=== HEAD

* Fix handling of non-existent server in single-threaded connection pool (jeremyevans)

* Default to using mysqlplus driver in the native mysql adapter, fall back to mysql driver (ibc, jeremyevans)

* Handle 64-bit integers in JDBC prepared statements (paulfras)

* Improve blob support when using the H2 JDBC subadapter (nullstyle, jeremyevans, paulfras)

* Add Database#each_server, which yields a new Database object for each server in the connection pool which is connected to only that server (jeremyevans)

* Add Dataset#each_server, which yields a dataset for each server in the connection pool which is will execute on that server (jeremyevans)

* Remove meta_eval and metaclass private methods from Sequel::Metaprogramming (jeremyevans)

* Merge Dataset::FROM_SELF_KEEP_OPTS into Dataset::NON_SQL_OPTIONS (jeremyevans)

* Add Database#remove_servers for removing servers from the pool on the fly (jeremyevans)

* When disconnecting servers, if there are any connections to the server currently in use, schedule them to be disconnected (jeremyevans)

* Allow disconnecting specific server(s)/shard(s) in Database#disconnect via a :server option (jeremyevans)

* Handle multiple statements in a single query in the native MySQL adapter in all cases, not just when selecting via Dataset#each (jeremyevans)

* In the boolean_readers plugin, don't raise an error if the model's columns can't be determined (jeremyevans)

* In the identity_map plugin, remove instances from the cache if they are deleted/destroyed (jeremyevans)

* Add Database#add_servers, for adding new servers/shards on the fly (chuckremes, jeremyevans)

=== 3.7.0 (2009-12-01)

* Add Dataset#sequence to the shared Oracle Adapter, for returning autogenerated primary key values on insert (jeremyevans) (#280)

* Bring support for modifying joined datasets into Sequel proper, supported on MySQL and PostgreSQL (jeremyevans)

* No longer use native autoreconnection in the mysql adapter (jeremyevans)
