@@ -1,5 +1,7 @@
 === HEAD
 
+* Raise DatabaseConnectionErrors in the single-threaded connection pool if unable to connect (jeremyevans)
+
 * Fix handling of non-existent server in single-threaded connection pool (jeremyevans)
 
 * Default to using mysqlplus driver in the native mysql adapter, fall back to mysql driver (ibc, jeremyevans)
